tests/test019.err
error: test019.tig:4:8: repeated type name `t'
