tests/test019.tig
/* ERR: repeated type name */
let
  type t = string
  type t = int
in
end